fix front page, realign text and sensitive content clicker

--- a/app/javascript/flavours/glitch/styles/about.scss
+++ b/app/javascript/flavours/glitch/styles/about.scss
@@ -1319,6 +1319,18 @@ $small-breakpoint: 960px;
           display: none;
         }
       }
+
+      @import 'landing_page';
+
+      @keyframes floating {
+        from {
+          transform: translate(0, 0);
+        }
+
+        65% {
+          transform: translate(0, 4px);
+        }
+      }
     }
   }
 }
